Loading data from server

--- a/places-generator/src/app/app.component.html
+++ b/places-generator/src/app/app.component.html
@@ -1,4 +1,6 @@
-<div class="container">
-  <app-list-places></app-list-places>
-</div>
+  <div style="padding-left: 50px; padding-right: 50px;">
+    <app-list-places></app-list-places>
+  </div>
+
+
 
