--- a/places-generator/src/app/list-places/list-places.component.html
+++ b/places-generator/src/app/list-places/list-places.component.html
@@ -112,12 +112,11 @@
             <div class="col-xl align-items-center">
               <a style="text-align: center;" onclick="document.getElementById('thumbnail').click();">
                 <div style="width:247px; height: 277px">
-                <div style="position: relative; width: 100%; height:100%; z-index: 1; background: url('../../assets/hot_place_frame.png');">
-                  <i class="far fa-image" style="line-height: 247px"></i>
-                </div>
+                <img src="{{thumbnailSrc}}" id="thumbnailImage" style="width:91%; height:82%; position:relative; background: pink; border-radius:25px; border:none;" [ngStyle]="{'opacity': thumbnailSrc.length == 0 ? 0 : 1}">
+                  <img src='../../assets/hot_place_frame.png' alt="" style="position:relative; width:100%; height: 100%; z-index: 1; top: -237px">
                 <div style="position: relative; left: 5%; top:-96%; width:91%; height: 81%; border-radius: 25px"></div>
 
-                <input id="thumbnail" type="file" name="foto" style="display:none">
+                <input id="thumbnail" type="file" name="foto" style="display:none" (change)="setThumbnail($event)">
               </div></a>
               <p>Thumbnail</p>
             </div>
@@ -125,18 +124,18 @@
             <div class="row">
               <div class="col-xl">
                 <a style="text-align: center;" onclick="document.getElementById('file-input1').click();">
-                  <div style="background-color: rgb(230,230,230); width:302.22px; height: 170px">
-                  <i class="far fa-image" style="line-height: 170px"></i>
-                  <input id="file-input1" type="file" name="foto" style="display:none">
+                  <div style="background-color: rgb(230,230,230); width:302.22px; height: 170px; background-size: cover" [ngStyle]="{'background-image': 'url('+pictureUnoSrc+')'}">
+                  <i class="far fa-image" style="line-height: 170px" *ngIf="pictureUnoSrc === ''"></i>
+                  <input id="file-input1" type="file" name="foto" style="display:none" (change)="setPictureUno($event)">
                 </div></a>
                 <p>Picture 1</p>
               </div>
 
               <div class="col-xl">
                 <a style="text-align: center; float: right" onclick="document.getElementById('file-input2').click();">
-                  <div style="background-color: rgb(230,230,230); width:302.22px; height: 170px">
-                  <i class="far fa-image" style="line-height: 170px"></i>
-                  <input id="file-input2" type="file" name="foto" style="display:none">
+                  <div style="background-color: rgb(230,230,230); width:302.22px; height: 170px; background-size: cover" [ngStyle]="{'background-image': 'url('+pictureDosSrc+')'}">
+                  <i class="far fa-image" style="line-height: 170px" *ngIf="pictureDosSrc === ''"></i>
+                  <input id="file-input2" type="file" name="foto" style="display:none" (change)="setPictureDos($event)">
                 </div></a>
                 <p>Picture 2</p>
               </div>
@@ -146,18 +145,18 @@
           <div class="row">
             <div class="col-xl">
               <a style="text-align: center;" onclick="document.getElementById('file-input3').click();">
-                <div style="background-color: rgb(230,230,230); width:302.22px; height: 170px">
-                <i class="far fa-image" style="line-height: 170px"></i>
-                <input id="file-input3" type="file" name="foto" style="display:none">
+                <div style="background-color: rgb(230,230,230); width:302.22px; height: 170px; background-size: cover" [ngStyle]="{'background-image': 'url('+pictureTresSrc+')'}">
+                <i class="far fa-image" style="line-height: 170px" *ngIf="pictureTresSrc === ''"></i>
+                <input id="file-input3" type="file" name="foto" style="display:none" (change)="setPictureTres($event)">
               </div></a>
               <p>Picture 3</p>
             </div>
 
             <div class="col-xl">
               <a style="text-align: center; float: right" onclick="document.getElementById('file-input4').click();">
-                <div style="background-color: rgb(230,230,230); width:302.22px; height: 170px">
-                <i class="far fa-image" style="line-height: 170px"></i>
-                <input id="file-input4" type="file" name="foto" style="display:none">
+                <div style="background-color: rgb(230,230,230); width:302.22px; height: 170px; background-size: cover" [ngStyle]="{'background-image': 'url('+pictureCuatroSrc+')'}">
+                <i class="far fa-image" style="line-height: 170px" *ngIf="pictureCuatroSrc === ''"></i>
+                <input id="file-input4" type="file" name="foto" style="display:none" (change)="setPictureCuatro($event)">
               </div></a>
               <p>Picture 4</p>
             </div>
